Save places to database

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,24 @@
+server.port=8080
+server.user=admin
+server.password=$2y$10$Mo6vRbQQD6jiPqDyh5MdieBG.6xQUcYcSmEPY8.Zk36u4D/cjYwgi
+
+#SSL -------------------------------------------------------------------------------------------------
+server.ssl.enabled=false
+#server.ssl.protocol=TLS
+#server.ssl.enabled-protocols=TLSv1.2
+#server.ssl.ciphers=TLS_RSA_WITH_AES_128_CBC_SHA256
+server.ssl.key-store=server.jks
+server.ssl.key-store-password=secret
+server.ssl.key-store-type=PKCS12
+server.ssl.key-alias=localhost
+server.ssl.key-password=secret
+server.http2.enabled=true
+
+#OAuth2 -------------------------------------------------------------------------------------------------
+#spring.security.oauth2.client.registration.google.client-id=969314134324-2t840lr7e1bkoqfmrm1gfafvqbnd2up7.apps.googleusercontent.com
+#spring.security.oauth2.client.registration.google.client-secret=f_pxsU1B19NjvmGiQitzeMOA
+
+#Database -------------------------------------------------------------------------------------------------
 spring.jpa.hibernate.naming_strategy=org.hibernate.cfg.EJB3NamingStrategy
 spring.jpa.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 spring.jpa.hibernate.show_sql=true
@@ -8,21 +29,16 @@ spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/placesdb?createDatabaseIfNotExist=true
 spring.datasource.username=test
 spring.datasource.password=test
-
 liquibase.change-log=classpath:/db/changelog/changelog-master.xml
 
-server.port=8080
-server.user=admin
-server.password=$2y$10$Mo6vRbQQD6jiPqDyh5MdieBG.6xQUcYcSmEPY8.Zk36u4D/cjYwgi
+#Google -------------------------------------------------------------------------------------------------
+google.api.key=AIzaSyAGzdwR3_bbWHj-mbRh8G-5FEY8ANFkaQk
+google.nextPageTokenTime=2000
 
-server.ssl.key-store=keystore.p12
-server.ssl.key-store-password=testtest
-server.ssl.keyStoreType=PKCS12
-server.ssl.keyAlias=tomcat
+#Configuration for searching the places -----------------------------------------------------------------
+config.radius=5000
 
-spring.security.oauth2.client.registration.google.client-id=969314134324-2t840lr7e1bkoqfmrm1gfafvqbnd2up7.apps.googleusercontent.com
-spring.security.oauth2.client.registration.google.client-secret=f_pxsU1B19NjvmGiQitzeMOA
-
+#Actuator -------------------------------------------------------------------------------------------------
 management.server.port=8081
 management.endpoints.jmx.exposure.include=*
 management.endpoints.web.exposure.include=health,info
