--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -19,13 +19,9 @@ server.http2.enabled=true
 #spring.security.oauth2.client.registration.google.client-secret=f_pxsU1B19NjvmGiQitzeMOA
 
 #Database -------------------------------------------------------------------------------------------------
-spring.jpa.hibernate.naming_strategy=org.hibernate.cfg.EJB3NamingStrategy
-spring.jpa.hibernate.dialect=org.hibernate.dialect.MySQLDialect
-spring.jpa.hibernate.show_sql=true
-spring.jpa.hibernate.format_sql=true
-spring.jpa.hibernate.hbm2ddl.auto=create
 spring.jpa.generate-ddl=true
-spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+spring.jpa.show-sql=true
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/placesdb?createDatabaseIfNotExist=true
 spring.datasource.username=test
 spring.datasource.password=test
@@ -36,7 +32,7 @@ google.api.key=AIzaSyAGzdwR3_bbWHj-mbRh8G-5FEY8ANFkaQk
 google.nextPageTokenTime=2000
 
 #Configuration for searching the places -----------------------------------------------------------------
-config.radius=5000
+
 
 #Actuator -------------------------------------------------------------------------------------------------
 management.server.port=8081
