--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,6 +2,9 @@ server.port=8080
 server.user=admin
 server.password=$2y$10$Mo6vRbQQD6jiPqDyh5MdieBG.6xQUcYcSmEPY8.Zk36u4D/cjYwgi
 
+#Profiles dev, prod ----------------------------------------------------------------------------------
+spring.profiles.active=dev
+
 #SSL -------------------------------------------------------------------------------------------------
 server.ssl.enabled=false
 #server.ssl.protocol=TLS
@@ -32,7 +35,6 @@ google.api.key=AIzaSyAGzdwR3_bbWHj-mbRh8G-5FEY8ANFkaQk
 google.nextPageTokenTime=2000
 
 #Configuration for searching the places -----------------------------------------------------------------
-
 
 #Actuator -------------------------------------------------------------------------------------------------
 management.server.port=8081
